# grypt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: cli.rs  config.rs  crypto.rs  init.rs  lib.rs  main.rs  passphrase.rs
tests/: integration.rs
