[package]
name = "grypt"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.2"
clap = { version = "4.6.0", features = ["derive"] }
git2 = "0.20.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.0"
